--- a/package.json
+++ b/package.json
@@ -18,10 +18,9 @@
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/elements": "^1.3.21",
-    "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@react-navigation/stack": "^6.3.20",
-    "axios": "^1.6.3",
+    "axios": "^1.6.5",
     "expo": "~49.0.13",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.5.2",
@@ -33,6 +32,7 @@
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-storage": "^1.0.1",
     "react-native-svg": "13.9.0",
     "react-native-vector-icons": "^10.0.1",
     "tailwindcss": "^3.3.2"
