--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.5.2",
     "nativewind": "^2.0.11",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-native": "0.72.6",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-ico-material-design": "^5.1.2",
@@ -35,7 +35,10 @@
     "react-native-storage": "^1.0.1",
     "react-native-svg": "13.9.0",
     "react-native-vector-icons": "^10.0.1",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.3.2",
+    "react-native-web": "~0.19.6",
+    "react-dom": "18.2.0",
+    "@expo/webpack-config": "^19.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
