--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^19.0.0",
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-brands-svg-icons": "^6.5.1",
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
@@ -26,6 +27,7 @@
     "firebase": "^10.5.2",
     "nativewind": "^2.0.11",
     "react": "^18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "0.72.6",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-ico-material-design": "^5.1.2",
@@ -34,11 +36,10 @@
     "react-native-screens": "~3.22.0",
     "react-native-storage": "^1.0.1",
     "react-native-svg": "13.9.0",
+    "react-native-toast-message": "^2.2.0",
     "react-native-vector-icons": "^10.0.1",
-    "tailwindcss": "^3.3.2",
     "react-native-web": "~0.19.6",
-    "react-dom": "18.2.0",
-    "@expo/webpack-config": "^19.0.0"
+    "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
