--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-navigation/stack": "^6.3.20",
     "axios": "^1.6.5",
     "expo": "~49.0.13",
+    "expo-linear-gradient": "~12.3.0",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.5.2",
     "nativewind": "^2.0.11",
@@ -31,12 +32,15 @@
     "react-native": "0.72.6",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-ico-material-design": "^5.1.2",
+    "react-native-inset-shadow": "^1.0.3",
+    "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-storage": "^1.0.1",
     "react-native-svg": "13.9.0",
     "react-native-toast-message": "^2.2.0",
+    "react-native-ui-datepicker": "^1.0.11",
     "react-native-vector-icons": "^10.0.1",
     "react-native-web": "~0.19.6",
     "tailwindcss": "^3.3.2"
@@ -46,6 +50,7 @@
     "@types/firebase": "^3.2.1",
     "@types/react": "~18.2.14",
     "@types/react-native": "^0.73.0",
+    "@types/react-native-modern-datepicker": "^1.0.5",
     "@types/react-native-vector-icons": "^6.4.16",
     "typescript": "^5.1.3"
   },
