--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-gesture-handler": "~2.12.0",
     "react-native-ico-material-design": "^5.1.2",
     "react-native-inset-shadow": "^1.0.3",
+    "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-paper": "^5.12.3",
     "react-native-reanimated": "~3.3.0",
