--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
     "react-native-calendars": "^1.1303.0",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-ico-material-design": "^5.1.2",
     "react-native-inset-shadow": "^1.0.3",
@@ -42,7 +44,7 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-storage": "^1.0.1",
-    "react-native-svg": "13.9.0",
+    "react-native-svg": "^14.1.0",
     "react-native-toast-message": "^2.2.0",
     "react-native-ui-datepicker": "^1.0.11",
     "react-native-vector-icons": "^10.0.1",
