--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
     "@types/react-native": "^0.73.0",
     "@types/react-native-modern-datepicker": "^1.0.5",
     "@types/react-native-vector-icons": "^6.4.16",
+    "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.11",
     "typescript": "^5.1.3"
   },
   "private": true
