--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "react-native-ui-datepicker": "^1.0.11",
     "react-native-vector-icons": "^10.0.1",
     "react-native-web": "~0.19.6",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.3.2",
+    "expo-image-picker": "~14.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
