--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@react-navigation/stack": "^6.3.20",
     "axios": "^1.6.5",
     "expo": "~49.0.13",
+    "expo-camera": "~13.4.4",
     "expo-linear-gradient": "~12.3.0",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.5.2",
@@ -49,8 +50,7 @@
     "react-native-ui-datepicker": "^1.0.11",
     "react-native-vector-icons": "^10.0.1",
     "react-native-web": "~0.19.6",
-    "tailwindcss": "^3.3.2",
-    "expo-image-picker": "~14.3.2"
+    "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
