--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "react-native-vector-icons": "^10.0.1",
     "react-native-web": "~0.19.6",
     "tailwindcss": "^3.3.2",
-    "expo-image-picker": "~14.3.2"
+    "expo-image-picker": "~14.3.2",
+    "expo-camera": "~13.4.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
